# fastapi-lambda

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  NOTICE  PRE_PUBLISH_CHECKLIST.md  PUBLISHING.md  README.md  RELEASE.md  config.sh  package-lock.json  package.json  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.github/scripts/: bump-version.sh
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  CORS.md
examples/: README.md  jwt_auth.py  test_jwt_example.py
fastapi_lambda/: __init__.py  _compat.py  app.py  applications.py  datastructures.py  dependencies.py  openapi_schema.py  param_functions.py  params.py  request.py  requests.py  response.py  router.py  routing.py  security.py  types.py  utils.py
fastapi_lambda/middleware/: __init__.py  base.py  cors.py  errors.py  exceptions.py
fastapifn/: __init__.py  _compat.py  app.py  dependencies.py  exceptions.py  openapi_schema.py  param_functions.py  request.py  response.py  router.py  security.py  utils.py
fastapifn/middleware/: __init__.py  cors.py
tests/: __init__.py  conftest.py  test_compat.py  test_compatibility.py  test_cors.py  test_dependencies.py  test_middleware.py  test_openapi.py  test_param_functions.py  test_request.py  test_requests.py  test_response.py  test_response_headers.py  test_routing.py  test_security.py  test_validation.py  utils.py
tests/e2e/: README.md  conftest.py  serverless.yml  stack-output.json  test_cors_e2e.py  test_deployment_specific.py  test_smoke.py
tests/e2e/sample_lambda/: handler.py  requirements.txt
