[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[project]
authors = [
  {name = "Tobias Silicani", email = "tobias@example.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: FastAPI",
]
dependencies = [
  "pydantic>=2.7.0,<3.0.0",
  "typing-extensions>=4.8.0",
]
description = "FastAPI fork optimized for AWS Lambda with minimal cold start overhead (inspired by FastAPI by Sebastián Ramírez)"
keywords = ["fastapi", "lambda", "aws", "serverless", "api", "rest", "openapi", "pydantic"]
license = {text = "MIT"}
name = "fastapi-lambda"
readme = "README.md"
requires-python = ">=3.10"
version = "0.2.1"

[project.urls]
Documentation = "https://github.com/tsilicani/fastapi-lambda#readme"
Homepage = "https://github.com/tsilicani/fastapi-lambda"
Issues = "https://github.com/tsilicani/fastapi-lambda/issues"
Repository = "https://github.com/tsilicani/fastapi-lambda"

[tool.poetry]
include = ["fastapi_lambda/py.typed"]
packages = [{include = "fastapi_lambda"}]

[tool.poetry.group.dev.dependencies]
aws-sam-cli = {version = ">=1.100.0", markers = "python_version >= \"3.9\" and python_version < \"4.0\""}
boto3 = "^1.40.50"
flake8 = "^7.3.0"
ipykernel = "^7.0.0"
pyright = "^1.1.406"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
requests = "^2.32.5"
vulture = "^2.14"

[tool.black]
line-length = 120

[tool.pyright]
include = ["fastapi_lambda", "tests"]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning",
]
norecursedirs = [".venv", ".serverless", "__pycache__"]
python_files = ["test_*.py"]
testpaths = [
  "tests",
]
